# feldspar-language

./: .gitignore  .travis.yml  CONTRIBUTING.md  Feldspar.hs  LICENSE  README.md  Setup.hs  feldspar-language.cabal  hie.yaml  stack-8.0.2.yaml  stack-8.8.4.yaml  stack.yaml
.github/workflows/: ci.yml
Feldspar/: BitVector.hs  Core.hs  FixedPoint.hs  Future.hs  Lattice.hs  Matrix.hs  Par.hs  Prelude.hs  Range.hs  Repa.hs  Stream.hs  Vector.hs  Wrap.hs
Feldspar/Algorithm/: CRC.hs  FFT.hs
Feldspar/Core/: Collection.hs  Constructs.hs  Frontend.hs  Interpretation.hs  Types.hs
Feldspar/Core/Constructs/: Array.hs  Binding.hs  Bits.hs  Complex.hs  Condition.hs  ConditionM.hs  Conversion.hs  Eq.hs  Error.hs  FFI.hs  Floating.hs  Fractional.hs  Future.hs  Integral.hs  Literal.hs  Logic.hs  Loop.hs  Mutable.hs  MutableArray.hs  MutableReference.hs  MutableToPure.hs  NoInline.hs  Num.hs  Ord.hs  Par.hs  Save.hs  SizeProp.hs  SourceInfo.hs  Trace.hs  Tuple.hs
Feldspar/Core/Frontend/: Array.hs  Binding.hs  Bits.hs  Complex.hs  Condition.hs  ConditionM.hs  Conversion.hs  Eq.hs  Error.hs  FFI.hs  Floating.hs  Fractional.hs  Future.hs  Integral.hs  Literal.hs  Logic.hs  Loop.hs  Mutable.hs  MutableArray.hs  MutableReference.hs  MutableToPure.hs  NoInline.hs  Num.hs  Ord.hs  Par.hs  Save.hs  Select.hs  SizeProp.hs  SourceInfo.hs  Trace.hs  Tuple.hs
Feldspar/Vector/: Internal.hs  Push.hs
benchs/: BenchmarkUtils.hs  CRC.hs  FFT.hs  FIR_Fusion.hs  MatMul.hs  MatMulC.c  MatMulC.h
clib/: feldspar_array.h  feldspar_c99.c  feldspar_c99.h  feldspar_future.h  ivar.c  ivar.h  log.h  taskpool.c  taskpool.h
examples/Examples/Simple/: Basics.hs
examples/Tutorial/: Array.lhs  Basic.lhs  Makefile  Patch.lhs  SimpleVector.lhs  Size.lhs  Vector.lhs  back.html  index.lhs  style.css
examples/UsersGuide/: Array.lhs  Arrays.lhs  Basic.lhs  Makefile  Patch.lhs  Size.lhs  SizeConstraints.lhs  Vector.lhs  back.html  index.lhs  style.css
onnx/: README
onnx/Onnx/: GraphProto.hs  NodeProto.hs-boot  StringStringEntryProto.hs  TensorAnnotation.hs  TensorProto.hs  TypeProto.hs-boot  Version.hs
onnx/Onnx/TensorProto/: DataType.hs
src/: Feldspar.hs
src/Feldspar/: BitVector.hs  Compiler.hs  FixedPoint.hs  Future.hs  Lattice.hs  Matrix.hs  Memoize.hs  Mutable.hs  Option.hs  Par.hs  Prelude.hs  Range.hs  Repa.hs  Runtime.hs  Seq.hs  SimpleVector.hs  Stream.hs  ValueInfo.hs  Vector.hs  Wrap.hs
src/Feldspar/Algorithm/: CRC.hs  FFT.hs
src/Feldspar/Algorithm/FFT/: Push.hs  Twids.hs  Utils.hs
src/Feldspar/Compiler/: CallConv.hs  Compiler.hs  Error.hs  ExternalProgram.hs  Marshal.hs  Options.hs  Plugin.hs
src/Feldspar/Compiler/Imperative/: ArrayOps.hs  ExternalProgram.hs  FromCore.hs  Frontend.hs  Representation.hs
src/Feldspar/Core/: AdjustBindings.hs  Collection.hs  Constructs.hs  Eval.hs  Frontend.hs  Interpretation.hs  Language.hs  NestedTuples.hs  Reify.hs  Render.hs  Representation.hs  Semantics.hs  SizeProp.hs  Syntactic.hs  Tuple.hs  Types.hs  UntypedRepresentation.hs  ValueInfo.hs
src/Feldspar/Core/Constructs/: Array.hs  Binding.hs  Bits.hs  Complex.hs  Condition.hs  ConditionM.hs  Conversion.hs  Elements.hs  Eq.hs  Error.hs  FFI.hs  Floating.hs  Fractional.hs  Future.hs  Integral.hs  Literal.hs  Logic.hs  Loop.hs  MultiDim.hs  Mutable.hs  MutableArray.hs  MutableReference.hs  MutableToPure.hs  NoInline.hs  Num.hs  Ord.hs  Par.hs  RealFloat.hs  Save.hs  SizeProp.hs  SourceInfo.hs  Switch.hs  Trace.hs  Tuple.hs
src/Feldspar/Core/Frontend/: Array.hs  Binding.hs  Bits.hs  Complex.hs  Condition.hs  ConditionM.hs  Conversion.hs  Elements.hs  Eq.hs  Error.hs  FFI.hs  Floating.hs  Fractional.hs  Future.hs  Integral.hs  Literal.hs  Logic.hs  Loop.hs  LoopM.hs  Mutable.hs  MutableArray.hs  MutableReference.hs  MutableToPure.hs  NoInline.hs  Num.hs  Ord.hs  Par.hs  RealFloat.hs  Save.hs  Select.hs  SourceInfo.hs  Switch.hs  Trace.hs  Tuple.hs
src/Feldspar/Core/Interpretation/: Typed.hs
src/Feldspar/Onnx/: LibONNX.hs  Operators.hs  README  onnx.proto  onnxToFeld.hs
src/Feldspar/SimpleVector/: Internal.hs  Push.hs
src/Feldspar/Vector/: Deep.hs  Internal.hs  MultiDim.hs  Opt.hs  Opt2.hs  Pull.hs  PullPush.hs  Push.hs  PushMultiDim.hs  Sequential.hs  Shape.hs  Unbox.hs
src/Onnx/: AttributeProto.hs  GraphProto.hs  ModelProto.hs  NodeProto.hi-boot  NodeProto.hs  NodeProto.hs-boot  OnnxToFeld.hs  OperatorSetIdProto.hs  README  SparseTensorProto.hs  StringStringEntryProto.hs  TensorAnnotation.hs  TensorProto.hs  TensorShapeProto.hs  TrainingInfoProto.hs  TypeProto.hs  TypeProto.hs-boot  ValueInfoProto.hs  Version.hs
src/Onnx/AttributeProto/: AttributeType.hs
src/Onnx/Onnx/: AttributeProto.hs  OperatorSetIdProto.hs  SparseTensorProto.hs  TypeProto.hi-boot
src/Onnx/Onnx/TypeProto/: Map.hs  (+1 more)
src/Onnx/TensorProto/: DataLocation.hs  DataType.hs  Segment.hs
src/Onnx/TensorShapeProto/: Dimension.hs
src/Onnx/TypeProto/: Map.hs  Sequence.hs  Tensor.hs  Value.hs
src/clib/include/: feldspar_c99.h  feldspar_tic64x.c  feldspar_tic64x.h  taskpool.c
tests/: CallingConvention.hs  DecorationTests.hs  RangeTest.hs  RegressionTests.hs  SemanticsTest.hs  TutorialTest.hs
tests/Feldspar/Applications/: TFLib.hs  TFModel.hs
tests/Feldspar/Core/: Test.hs  TestUtils.hs
tests/Feldspar/Mutable/: Test.hs
tests/Feldspar/Range/: Test.hs
tests/Feldspar/Stream/: Test.hs
tests/Feldspar/Tuple/: Test.hs
tests/Feldspar/Vector/: Test.hs
tests/gold/: arrayInStruct.c  arrayInStruct.h  arrayInStructInStruct.c  arrayInStructInStruct.h  arrayInStruct_openMP.c  arrayInStruct_openMP.h  arrayInStruct_wool.c  arrayInStruct_wool.h  complexWhileCond.c  complexWhileCond.h  concatV.c  concatV.h  concatVM.c  concatVM.h  deepArrayCopy.c  deepArrayCopy.h  divConq3.c  divConq3.h  example9.c  example9.h  example9.txt  ffiTest.c  ffiTest.h  foreignEffect.c  foreignEffect.h  fut1.c  fut1.h  fut1_ret.c  fut1_ret.h  issue128_ex1.c  issue128_ex1.h  issue128_ex2.c  issue128_ex2.h  issue128_ex3.c  issue128_ex3.h  ivartest.c  ivartest.h  ivartest2.c  ivartest2.h  metrics.c  (+34 more)
tests/silver/: topLevelConsts.txt  trickySharing.txt
(+25 files in other folders)
