name:           feldspar-language
version:        0.6.1.0
synopsis:       A functional embedded language for DSP and parallelism
description:    Feldspar (Functional Embedded Language for DSP and PARallelism)
                is an embedded DSL for describing digital signal processing
                algorithms. This package contains the language front-end and an
                interpreter.
category:       Language
copyright:      Copyright (c) 2013 Emil Axelsson, Peter Jonsson,
                                   Anders Persson, Josef Svenningsson
                Copyright (c) 2012 Emil Axelsson, Gergely Dévai,
                                   Anders Persson, Josef Svenningsson
                Copyright (c) 2009-2011, ERICSSON AB
author:         Functional programming group at Chalmers University of Technology
maintainer:     Emil Axelsson <emax@chalmers.se>,
                Anders Persson <anders.cj.persson@gmail.com>
license:        BSD3
license-file:   LICENSE
stability:      experimental
homepage:       http://feldspar.github.com
bug-reports:    https://github.com/feldspar/feldspar-language/issues
build-type:     Simple
cabal-version:  >= 1.14
tested-with:    GHC==8.0.2, GHC==8.4.4

extra-source-files:
  examples/Examples/Simple/Basics.hs
  examples/Tutorial/*.lhs

source-repository head
  type:     git
  location: git://github.com/Feldspar/feldspar-language.git

library
  exposed-modules:
    Feldspar
    Feldspar.Lattice
    Feldspar.Range
    Feldspar.ValueInfo
    Feldspar.Core.AdjustBindings
    Feldspar.Core.Eval
    Feldspar.Core.Language
    Feldspar.Core.NestedTuples
    Feldspar.Core.Reify
    Feldspar.Core.Representation
    Feldspar.Core.Semantics
    Feldspar.Core.SizeProp
    Feldspar.Core.Tuple
    Feldspar.Core.Types
    Feldspar.Core.UntypedRepresentation
    Feldspar.Core.Middleend.Constructors
    Feldspar.Core.Middleend.CreateTasks
    Feldspar.Core.Middleend.Expand
    Feldspar.Core.Middleend.FromTyped
    Feldspar.Core.Middleend.FromTypeUtil
    Feldspar.Core.Middleend.LetSinking
    Feldspar.Core.Middleend.OptimizeUntyped
    Feldspar.Core.Middleend.PassManager
    Feldspar.Core.Middleend.PushLets
    Feldspar.Core.Middleend.UniqueVars
    Feldspar.Core.Interpretation
    Feldspar.Core.Frontend
    Feldspar.Core.Collection
    Feldspar.Core
    Feldspar.BitVector
    Feldspar.Future
    Feldspar.Memoize
    Feldspar.Mutable
    Feldspar.Option
    Feldspar.Repa
    Feldspar.Seq
    Feldspar.Stream
    Feldspar.Vector
    Feldspar.Vector.Shape
    Feldspar.SimpleVector
    Feldspar.SimpleVector.Internal
    Feldspar.SimpleVector.Push
    Feldspar.Par
    Feldspar.Algorithm.CRC
    Feldspar.Algorithm.FFT
    Feldspar.Algorithm.FFT.Push
    Feldspar.Algorithm.FFT.Twids
    Feldspar.Algorithm.FFT.Utils

  default-language: Haskell2010

  build-depends:
    array,
    base                        >= 4      && < 5.9,
    base-orphans,
    bytestring                  >= 0.10   && < 0.11,
    containers                  >= 0.4    && < 0.7,
    comonad                     >= 4.2    && < 6.0,
    mtl                         >= 2.0    && < 2.3,
    QuickCheck                  >= 2.7    && < 3,
    patch-combinators           >= 0.2    && < 0.3,
    prelude-edsl                             < 0.4,
    tuple                       >= 0.2    && < 0.5,
    monad-par                   >= 0.3.4.5,
    deepseq,
    random                      >= 1.0    && < 1.2,
    data-default                >= 0.5.3  && < 0.8,
    data-hash                   >= 0.2.0.1 && < 100,
    tree-view

  hs-source-dirs: src examples

  ghc-options: -freduction-depth=100

test-suite range
  type: exitcode-stdio-1.0

  hs-source-dirs: tests

  main-is: RangeTest.hs

  other-modules:
    Feldspar.Range.Test

  default-language: Haskell2010

  build-depends:
    feldspar-language,
    base,
    random           >= 1   && < 2,
    QuickCheck       >= 2.7 && < 3,
    tasty            >= 0.3,
    tasty-quickcheck >= 0.2

test-suite semantics
  type: exitcode-stdio-1.0

  hs-source-dirs: tests examples

  main-is: SemanticsTest.hs

  other-modules:
    Feldspar.Core.Test
    Feldspar.Stream.Test
    Feldspar.Vector.Test
    Feldspar.Mutable.Test
    Examples.Simple.Basics

  default-language: Haskell2010

  build-depends:
    feldspar-language,
    base,
    QuickCheck       >= 2.7 && < 3,
    tasty            >= 0.3,
    tasty-th         >= 0.1,
    tasty-quickcheck >= 0.2

test-suite decoration
  type: exitcode-stdio-1.0

  hs-source-dirs: tests examples

  main-is: DecorationTests.hs

  other-modules:
    Examples.Simple.Basics
    Feldspar.Applications.TFModel
    Feldspar.Applications.TFLib

  default-language: Haskell2010

  build-depends:
    feldspar-language,
    base,
    bytestring            >= 0.10 && < 0.11,
    tasty                 >= 0.3,
    tasty-golden          >= 2.3,
    utf8-string           >= 0.3.7

test-suite tutorial
  type: exitcode-stdio-1.0

  hs-source-dirs: tests examples

  main-is: TutorialTest.hs

  other-modules:
    Tutorial.Basic
    Tutorial.Array
    Tutorial.Patch
    Tutorial.Size
    Tutorial.SimpleVector
    Tutorial.Vector

  default-language: Haskell2010

  build-depends:
    feldspar-language,
    base,
    bytestring         >= 0.9 && < 0.11
